# netwatch

./: .gitignore  CHANGELOG.md  CLEANUP.md  CONTRIBUTING.md  Cargo.toml  INSIGHTS.md  LICENSE  README.md  SPEC.md  WIKI.md  build.rs  connections-only.tape  dashboard-only.tape  deeppacketplan.md  demo-all.tape  demo-blue.cast  demo-blue.cast.prev  demo-forensics.tape  demo-insights.tape  demo-reddit.tape  demo-slides.txt  demo.cast  demo.cast.bak  demo.gif.before-crop  demo.tape  ebpf.md  flake.nix  index.html  insights-only.tape  interfaces-only.tape  package.nix  packets-only.tape  processes-only.tape  screenshots.tape  stats-only.tape  timeline-only.tape  topology-only.tape
.github/workflows/: ci.yml  release.yml
Formula/: netwatch.rb
docs/: REFERENCE.md  quic-decryption-plan.md
examples/: ebpf_udp_v6_smoke.rs  ebpf_v6_smoke.rs  info_column_test.rs  ping_smoke.rs  ping_under_sandbox.rs  pktap_probe.rs  quic_decrypt_test.rs  test_capture.rs
scripts/: record-forensics-demo.sh
src/: app.rs  config.rs  event.rs  graph.rs  lib.rs  logging.rs  main.rs  remote.rs  sort.rs  theme.rs
src/collectors/: config.rs  connections.rs  geo.rs  health.rs  incident.rs  insights.rs  mod.rs  network_intel.rs  packets.rs  process_bandwidth.rs  traceroute.rs  traffic.rs  whois.rs
src/collectors/packets/: dns_cache.rs  filter.rs  format.rs  mod.rs  pcap_export.rs
src/dpi/: dhcp.rs  http3.rs  mod.rs  ntp.rs  quic.rs  tls.rs  tls_decrypt.rs
src/ebpf/: conn_tracker.rs  mod.rs  rtt_monitor.rs
src/platform/: linux.rs  macos.rs  mod.rs  pktap.rs  windows.rs
src/remote/: mod.rs
src/sandbox/: linux.rs  mod.rs
src/ui/: connections.rs  dashboard.rs  help.rs  insights.rs  interfaces.rs  memory_stats.rs  mod.rs  packets.rs  processes.rs  settings.rs  sort_picker.rs  stats.rs  timeline.rs  topology.rs  widgets.rs
