[package]
name = "netwatch-tui"
version = "0.14.0-rc.2"
edition = "2021"
authors = ["Matt Hartley <matthew.t.hartley@gmail.com>"]
description = "Real-time network diagnostics in your terminal. One command, zero config, instant visibility."
license = "MIT"
repository = "https://github.com/matthart1983/netwatch"
homepage = "https://github.com/matthart1983/netwatch"
readme = "README.md"
keywords = ["network", "tui", "terminal", "packet-capture", "diagnostics"]
categories = ["command-line-utilities", "network-programming"]
exclude = [
    ".DS_Store",
    # Demo capture artifacts — kept in the repo for README/marketing, but
    # excluded from the published crate (crates.io has a 10 MiB limit).
    "demo.gif",
    "demo.tape",
    "demo-all.gif",
    "demo-all.tape",
    "demo-linkedin.gif",
    "demo-linkedin.tape",
    "demo-slides.txt",
    "netwatch-demo.mov",
    "*.tape",
    "*.mov",
]

[lib]
name = "netwatch"
path = "src/lib.rs"

[[bin]]
name = "netwatch"
path = "src/main.rs"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1"
chrono = "0.4"
pcap = "2"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
maxminddb = "0.27"

[features]
default = []
ebpf = ["aya", "aya-log", "bytes"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["net", "ioctl", "hostname"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.12", optional = true }
aya-log = { version = "0.2", optional = true }
bytes = { version = "1", optional = true }
