[package]
name = "netwatch-tui"
version = "0.15.9"
edition = "2021"
authors = ["Matt Hartley <matthew.t.hartley@gmail.com>"]
description = "Real-time network diagnostics in your terminal. One command, zero config, instant visibility."
license = "MIT"
repository = "https://github.com/matthart1983/netwatch"
homepage = "https://github.com/matthart1983/netwatch"
readme = "README.md"
keywords = ["network", "tui", "terminal", "packet-capture", "diagnostics"]
categories = ["command-line-utilities", "network-programming"]
exclude = [
    ".DS_Store",
    # Demo capture artifacts — kept in the repo for README/marketing, but
    # excluded from the published crate (crates.io has a 10 MiB limit).
    "demo.gif",
    "demo.tape",
    "demo-all.gif",
    "demo-all.tape",
    "demo-linkedin.gif",
    "demo-linkedin.tape",
    "demo-slides.txt",
    "netwatch-demo.mov",
    "*.tape",
    "*.mov",
]

[lib]
name = "netwatch"
path = "src/lib.rs"

[[bin]]
name = "netwatch"
path = "src/main.rs"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1"
chrono = "0.4"
pcap = "2"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
maxminddb = "0.27"
# Used for QUIC Initial decryption (RFC 9001): HKDF-Expand-Label, AES-128-GCM
# AEAD, and AES-128-ECB header protection via `ring::aead::quic`. Already in
# the tree as a transitive dep of rustls; pinning explicitly so the QUIC
# crypto can't break under a transitive bump.
ring = "0.17"
# Global allocator. The default glibc `ptmalloc` retains freed chunks in
# per-thread arenas and can hold tens to a hundred MB of RSS that isn't
# logically in use, especially for long-running daemons that spawn short
# threads (which we do, per-collector tick). mimalloc trims aggressively
# and shaves a meaningful chunk off our steady-state baseline. Two-line
# wire-up: this dep + `#[global_allocator]` in src/main.rs.
mimalloc = { version = "0.1", default-features = false }
# Default: pulls in netwatch-sdk's Phase 1 BPF event source (a kprobe on
# `tcp_v4_connect` emitting per-(pid, comm, 5-tuple) connect events into
# a ring buffer for userspace). The SDK gates aya behind its own Linux
# target deps so this builds clean on macOS/Windows; the runtime path
# returns `EbpfError::UnsupportedPlatform` and we fall back to lsof/ss
# attribution. The Linux runtime path also gracefully falls back when
# the BPF object is missing or CAP_BPF/CAP_PERFMON aren't granted.
netwatch-sdk = { version = "0.1.2", features = ["ebpf"], optional = true }

[features]
# eBPF process attribution is on by default. The runtime gracefully
# downgrades to lsof/ss if the kernel won't load the BPF object (no
# CAP_BPF, kernel <5.10, non-Linux, BPF object not embedded into the
# SDK build), so users always get *some* attribution.
default = ["ebpf"]
ebpf = ["dep:netwatch-sdk"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["net", "ioctl", "hostname"] }
